--- a/SourceCode/package.json
+++ b/SourceCode/package.json
@@ -7,11 +7,14 @@
     "test": "jest"
   },
   "dependencies": {
+    "marked": "^0.3.6",
     "react": "15.3.2",
     "react-native": "0.37.0",
+    "react-native-accordion": "^1.0.1",
     "react-native-animatable": "^0.6.1",
     "react-native-collapsible": "^0.7.0",
     "react-native-drawer-layout": "^1.1.0",
+    "react-native-easy-grid-view": "^0.1.1",
     "react-native-scrollable-tab-view": "^0.6.0",
     "react-native-vector-icons": "^3.0.0"
   },
