--- a/SourceCode/package.json
+++ b/SourceCode/package.json
@@ -7,7 +7,9 @@
     "test": "jest"
   },
   "dependencies": {
+    "@shoutem/ui": "^0.9.1",
     "marked": "^0.3.6",
+    "native-base": "^0.5.15",
     "react": "15.3.2",
     "react-native": "0.37.0",
     "react-native-accordion": "^1.0.1",
